[package]
name = "demo-mt"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"
crossbeam = "0.8"
indicatif = { version = "0.15", features = ["rayon"] }
